# urlicon

./: .gitignore  Makefile  README.md  pyproject.toml
src/urlicon/: simple_cache.py  string_cache.py  urlicon.py
