[project]
name = "urlicon"
version = "0.2.4"
license = "MIT"
description = "`URLicon` helps you to discover an possible icon from a URL."
authors = [
    { name = "Cesar Cardoso", email = "hello@cesarcardoso.cc" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "unforgettable>=0.1.1",
]

[tool.bumpversion]
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uvx isort ./src", "uvx black ./src", "git add src", "uv sync --upgrade", "git add uv.lock"]
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "Makefile"
